# g4-ne697

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
include/: actioninitialization.hpp  detectorconstruction.hpp  eventaction.hpp  geometrymessenger.hpp  hit.hpp  pga.hpp  run.hpp  runaction.hpp  runmessenger.hpp  sensitivedetector.hpp
scripts/: init.mac  init_vis.mac  test.mac
src/: actioninitialization.cpp  detectorconstruction.cpp  eventaction.cpp  geometrymessenger.cpp  hit.cpp  main.cpp  pga.cpp  run.cpp  runaction.cpp  runmessenger.cpp  sensitivedetector.cpp
